CHANGES IN VERSION 1.39.6
--------------------------
BUG FIXES:
    o Major memory reduction in parallel fillPeaks() thanks to 
      Jan Stanstrup. Now using an environment to mirror gvals 
      to each list item in the very large argList.

CHANGES IN VERSION 1.39.4
--------------------------
BUG FIXES:
    o Fixed write.cdf(), which had an intensity offset of +1, added a unit test

CHANGES IN VERSION 1.39.3
--------------------------
BUG FIXES:
    o New R-devel check unload better. Lingering ramp code removed, import from mzR. Cleaned up other errors in package check.

CHANGES IN VERSION 1.39.1
--------------------------
BUG FIXES:
    o Updated doubleMatrix c code to allow for larger profile matrixes 

REQUIRED CHANGES
	o Moved inst/doc to vignettes 

CHANGES IN VERSION 1.37.6
--------------------------
NEW FEATURE:
     o Introducing write.mzQuantML(xcmsSet) to export the peak list and grouped matrix to the PSI format mzQuantML (see http://www.psidev.info/mzquantml)
USER VISIBLE CHANGES:
     o Add Brigham Young University to LICENSE file for copyright purposes. 
     o Add copyright information display when running findPeaks.massifquant()
     within xcmsRaw.R
     o Clean and update documentation for findPeaks.massifquant-methods.Rd  
BUG FIXES:
     o Remove unused parameters in findKalmanROIs() within xcmsRaw.R
CHANGES IN VERSION 1.37.5
--------------------------
BUG FIXES
    o fixed bug in retcor.obiwarp where the scanrange of the first sample would be checked instead of the center sample

CHANGES IN VERSION 1.37.4
--------------------------
BUG FIXES
    o Skip t-test in diffreport() if one class has less than 2 samples.

CHANGES IN VERSION 1.37.3
--------------------------
BUG FIXES
    o fixed bug in patternVsRowScore (group.nearest) that was introduced by the 
      modifications in rev 65169 and caused features to be aligned that were far outside the given m/z and retention time windows.


CHANGES IN VERSION 1.37.1
--------------------------